--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <!-- Tambahkan tombol di sini -->
         <div class="text-center mb-4">
-            <a href="https://nevan32.github.io/aichatbotfortesting/" target="_blank">
+            <a href="https://nevan32.github.io/chatbotforlaporanbugorsaran.github.io/" target="_blank">
                 <button class="btn bg-green-500 hover:bg-green-700 text-white">Laporkan Bug/Saran/Pertanyaan Disini</button>
             </a>
         </div>
