--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,9 +74,7 @@
 </head>
 
 <body>
-
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
-
         <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
 
         <!-- Tambahkan tombol di sini -->
@@ -100,7 +97,6 @@
             <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full" />
             <button @click="sendMessage" class="btn btn-primary mt-2">Kirim</button>
         </div>
-
     </div>
 
     <script type="module">
@@ -110,7 +106,7 @@
                 inputMessage: '',
                 messages: [],
                 typing: false,
-                firstInteraction: true, // Flag untuk mendeteksi interaksi pertama
+                firstInteraction: true,
             },
             methods: {
                 async sendMessage() {
@@ -118,39 +114,26 @@
                         const userMessage = { role: "user", content: this.cleanUpLinks(this.inputMessage) };
                         this.inputMessage = '';
                         this.messages.push(userMessage);
-
+                        
                         // Kirim pesan user ke Discord Webhook
                         this.sendToDiscord('User', userMessage.content);
 
                         this.typing = true;
 
                         if (this.firstInteraction) {
-                            const welcomeMessage = "Halo Selamat Datang di website ChatGPT versi buatan Raya, Orang yang menciptakan Website Ai ini adalah Raya Fadilla Azhar, Jika terjadi bug atau ada saran & pertanyaan silahkan WhatsApp Nomor Ini 0838-3232-5363, Website ini ter-inspirasi oleh ChatGPT https://chatgpt.com/ itu aja, terima kasih, selamat menggunakan website ai ini ya.";
+                            const welcomeMessage = "Halo Selamat Datang di website ChatGPT versi buatan Raya, Website Ai ini diciptakan oleh Raya Fadilla Azhar, Jika terjadi bug atau ada saran & pertanyaan silahkan Pencet Tombol 'LAPORKAN BUG/SARAN/PERTANYAAN DISINI'. Terima kasih, selamat menggunakan website ai ini ya.";
                             this.messages.push({ role: "assistant", content: welcomeMessage });
                             this.firstInteraction = false;
                             this.typing = false;
-                            this.sendToDiscord('Assistant', welcomeMessage); // Kirim pesan Assistant ke Discord Webhook
+                            this.sendToDiscord('Assistant', welcomeMessage);
                             return;
                         }
 
-                        const keywords = ['siapa yang menciptakan anda', 'pencipta anda'];
-                        const exclusionKeywords = ['tuhan', 'alam semesta'];
-
-                        if (this.containsExclusion(userMessage.content, exclusionKeywords)) {
-                            const assistantMessage = "Maaf, saya tidak dapat memberikan jawaban terkait pertanyaan ini.";
-                            this.messages.push({ role: "assistant", content: assistantMessage });
-                            this.sendToDiscord('Assistant', assistantMessage); // Kirim pesan Assistant ke Discord Webhook
-                        } else if (this.containsKeyword(userMessage.content, keywords)) {
-                            const assistantMessage = "Saya dibuat oleh Raya Fadilla Azhar.";
-                            this.messages.push({ role: "assistant", content: assistantMessage });
-                            this.sendToDiscord('Assistant', assistantMessage); // Kirim pesan Assistant ke Discord Webhook
-                        } else {
-                            const data = await generateText(this.messages);
-                            this.typing = false;
-                            this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
-                            this.sendToDiscord('Assistant', data); // Kirim pesan Assistant ke Discord Webhook
-                        }
-
+                        // Hapus pemeriksaan keyword dan panggil API langsung untuk menghasilkan balasan
+                        const data = await generateText(this.messages);
+                        this.typing = false;
+                        this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
+                        this.sendToDiscord('Assistant', data); // Kirim pesan Assistant ke Discord Webhook
                         this.typing = false;
                     }
                 },
@@ -161,16 +144,6 @@
 
                 formatMessageContent(content) {
                     return content.replace(/\n/g, '<br>').replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
-                },
-
-                containsKeyword(message, keywords) {
-                    const lowercaseMessage = message.toLowerCase();
-                    return keywords.some(keyword => lowercaseMessage.includes(keyword));
-                },
-
-                containsExclusion(message, exclusionKeywords) {
-                    const lowercaseMessage = message.toLowerCase();
-                    return exclusionKeywords.some(keyword => lowercaseMessage.includes(keyword));
                 },
 
                 copyToClipboard(content) {
@@ -189,14 +162,12 @@
                     }
                 },
 
-                // Fungsi untuk mengirim pesan ke Discord Webhook
                 async sendToDiscord(role, content) {
-                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl'; // Ganti dengan URL Webhook Discord-mu
+                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
                     const message = {
                         username: role,
                         content: content,
                     };
-
                     try {
                         await fetch(webhookURL, {
                             method: 'POST',
@@ -228,7 +199,5 @@
             return response.choices[0].message.content;
         }
     </script>
-
 </body>
-
 </html>
