--- a/index.html
+++ b/index.html
@@ -1,185 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chatbot Sederhana</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    <title>AI Chatbot</title>
     <style>
-        /* Styles omitted for brevity */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #chat-box {
+            width: 60%;
+            max-width: 700px;
+            height: 500px;
+            border: 1px solid #ccc;
+            padding: 20px;
+            background-color: white;
+            overflow-y: auto;
+        }
+        .message {
+            margin: 10px 0;
+        }
+        .message.user {
+            text-align: right;
+            color: blue;
+        }
+        .message.bot {
+            text-align: left;
+            color: green;
+        }
+        #input-box {
+            width: 60%;
+            max-width: 700px;
+            display: flex;
+            margin-top: 20px;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            padding: 10px;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            margin-left: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
-
 <body>
-    <div id="app" class="container mx-auto p-4 flex flex-col h-full">
-        <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
-
-        <div class="text-center mb-4">
-            <a href="https://nevan32.github.io/chatbotforlaporanbugorsaran.github.io/" target="_blank">
-                <button class="btn bg-green-500 hover:bg-green-700 text-white">Laporkan Bug/Saran/Pertanyaan Disini</button>
-            </a>
-        </div>
-
-        <div class="chat-container mb-4">
-            <div class="chat chat-start" v-for="(message, index) in messages" :key="index"
-                :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
-                <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
-                <div class="message-content" v-html="formatMessageContent(message.content)"></div>
-                <span @click="copyToClipboard(message.content)" class="copy-button">Salin</span>
-            </div>
-            <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
-        </div>
-
-        <div class="input-area">
-            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..."
-                class="input input-bordered w-full" />
-            <input type="file" @change="handleFileUpload" class="input input-bordered w-full mt-2" />
-            <button @click="sendMessage" class="btn btn-primary mt-2">Kirim</button>
-        </div>
+    <div id="chat-box"></div>
+    <div id="input-box">
+        <input type="text" id="user-input" placeholder="Ketik pesan..." autofocus>
+        <button onclick="sendMessage()">Kirim</button>
     </div>
 
-    <script type="module">
-        new Vue({
-            el: '#app',
-            data: {
-                inputMessage: '',
-                messages: [],
-                typing: false,
-                selectedFile: null,
-                firstInteraction: true,
-            },
-            methods: {
-                async sendMessage() {
-                    if (this.inputMessage.trim() !== '') {
-                        const userMessage = { role: "user", content: this.cleanUpLinks(this.inputMessage) };
-                        this.inputMessage = '';
-                        this.messages.push(userMessage);
+    <script>
+        const chatBox = document.getElementById('chat-box');
+        const userInput = document.getElementById('user-input');
 
-                        this.sendToDiscord('User', userMessage.content);
+        function addMessage(message, sender) {
+            const messageDiv = document.createElement('div');
+            messageDiv.classList.add('message', sender);
+            messageDiv.textContent = message;
+            chatBox.appendChild(messageDiv);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
 
-                        this.typing = true;
+        async function sendMessage() {
+            const message = userInput.value;
+            if (message.trim() === '') return;
 
-                        // Penanganan lampiran file jika ada
-                        if (this.selectedFile) {
-                            await this.handleFileProcessing();
-                            this.selectedFile = null;
-                        }
+            addMessage(message, 'user');
+            userInput.value = '';
 
-                        if (this.firstInteraction) {
-                            const welcomeMessage = "Halo Selamat Datang...";
-                            this.messages.push({ role: "assistant", content: welcomeMessage });
-                            this.firstInteraction = false;
-                            this.typing = false;
-                            this.sendToDiscord('Assistant', welcomeMessage);
-                            return;
-                        }
-
-                        const data = await generateText(this.messages);
-                        this.typing = false;
-                        this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
-                        this.sendToDiscord('Assistant', data);
-                    }
+            const response = await fetch('https://api.openai.com/v1/completions', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Authorization': `Bearer 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`
                 },
-
-                handleFileUpload(event) {
-                    this.selectedFile = event.target.files[0];
-                },
-
-                async handleFileProcessing() {
-                    const file = this.selectedFile;
-                    const fileType = file.type;
-
-                    if (fileType.startsWith('image/')) {
-                        // Tampilkan pratinjau gambar
-                        const reader = new FileReader();
-                        reader.onload = (e) => {
-                            const imgTag = `<img src="${e.target.result}" alt="Gambar yang diunggah" style="max-width:200px;"/>`;
-                            this.messages.push({ role: "user", content: imgTag });
-                            this.typing = true;
-                            setTimeout(() => {
-                                const aiResponse = "Gambar berhasil diunggah dan sedang diproses.";
-                                this.messages.push({ role: "assistant", content: aiResponse });
-                                this.typing = false;
-                            }, 1000);
-                        };
-                        reader.readAsDataURL(file);
-                    } else if (fileType === 'text/plain') {
-                        // Baca dan tampilkan isi file teks
-                        const reader = new FileReader();
-                        reader.onload = (e) => {
-                            const textContent = e.target.result;
-                            this.messages.push({ role: "user", content: `<pre>${textContent}</pre>` });
-                            this.typing = true;
-                            setTimeout(() => {
-                                const aiResponse = "File teks berhasil diunggah dan sedang diproses.";
-                                this.messages.push({ role: "assistant", content: aiResponse });
-                                this.typing = false;
-                            }, 1000);
-                        };
-                        reader.readAsText(file);
-                    } else {
-                        alert('Jenis file tidak didukung! Hanya gambar dan teks yang didukung.');
-                    }
-                },
-
-                cleanUpLinks(message) {
-                    return message.replace(/(https?:\/\/[^\s]+)\s+/g, '$1').replace(/\s+(com|org|net|id|co)/g, '$1');
-                },
-
-                formatMessageContent(content) {
-                    return content.replace(/\n/g, '<br>').replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
-                },
-
-                copyToClipboard(content) {
-                    if (!navigator.clipboard) {
-                        const el = document.createElement('textarea');
-                        el.value = content;
-                        document.body.appendChild(el);
-                        el.select();
-                        document.execCommand('copy');
-                        document.body.removeChild(el);
-                        alert('Pesan berhasil disalin menggunakan metode fallback!');
-                    } else {
-                        navigator.clipboard.writeText(content)
-                            .then(() => alert('Pesan berhasil disalin!'))
-                            .catch(err => console.error('Gagal menyalin teks: ', err));
-                    }
-                },
-
-                async sendToDiscord(role, content) {
-                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
-                    const message = { username: role, content: content };
-                    try {
-                        await fetch(webhookURL, {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json' },
-                            body: JSON.stringify(message),
-                        });
-                        console.log('Pesan terkirim ke Discord');
-                    } catch (error) {
-                        console.error('Gagal mengirim pesan ke Discord:', error);
-                    }
-                }
-            }
-        });
-
-        async function generateText(messages) {
-            const { HfInference } = await import('https://esm.sh/@huggingface/inference');
-            const hf = new HfInference('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');
-            const response = await hf.chatCompletion({
-                model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
-                messages: messages,
-                max_tokens: 500,
-                temperature: 0.3,
-                seed: 0,
+                body: JSON.stringify({
+                    model: "text-davinci-003",
+                    prompt: message,
+                    max_tokens: 150
+                })
             });
-            return response.choices[0].message.content;
+
+            const data = await response.json();
+            addMessage(data.choices[0].text.trim(), 'bot');
         }
     </script>
 </body>
-
 </html>
