--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,13 +39,24 @@
         }
 
         .chat-bubble-primary {
-            background-color: transparent;
+            background-color: #e0f7fa;
             color: black;
+            text-align: right;
         }
 
         .chat-bubble-secondary {
-            background-color: transparent;
+            background-color: #e0f2f1;
             color: black;
+            text-align: left;
+        }
+
+        .message-user {
+            justify-content: flex-end;
+            text-align: right;
+        }
+
+        .message-user img {
+            order: 2; /* Menempatkan gambar di sebelah kanan */
         }
 
         .copy-button {
@@ -85,21 +95,14 @@
         </div>
 
         <div class="chat-container mb-4">
-            <div class="chat chat-start" v-for="(message, index) in messages" :key="index" :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary float-right' : 'chat-bubble-secondary']">
-                <div class="flex items-center mb-2" v-if="message.role === 'user'">
-                    <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
-                    <img :src="'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png'" alt="User Icon" class="w-8 h-8 ml-2">
-                </div>
-                <div class="flex items-center mb-2" v-else>
-                    <img :src="'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'" alt="Assistant Icon" class="w-8 h-8 mr-2">
+            <div v-for="(message, index) in messages" :key="index" 
+                :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary message-user' : 'chat-bubble-secondary']">
+                <div class="flex items-center mb-2" :class="message.role === 'user' ? 'flex-row-reverse' : ''">
+                    <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'" alt="User or Assistant Icon" class="w-8 h-8 ml-2">
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
                 <div class="message-content" v-html="formatMessageContent(message.content)"></div>
-
-                <!-- Tombol untuk menyalin pesan, khusus untuk user -->
-                <div v-if="message.role === 'user'" class="flex justify-end">
-                    <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
-                </div>
+                <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
             </div>
 
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
@@ -112,99 +115,7 @@
     </div>
 
     <script type="module">
-        new Vue({
-            el: '#app',
-            data: {
-                inputMessage: '',
-                messages: [],
-                typing: false,
-                firstInteraction: true,
-            },
-            methods: {
-                async sendMessage() {
-                    if (this.inputMessage.trim() !== '') {
-                        const userMessage = { role: "user", content: this.cleanUpLinks(this.inputMessage) };
-                        this.inputMessage = '';
-                        this.messages.push(userMessage);
-
-                        // Kirim pesan user ke Discord Webhook
-                        this.sendToDiscord('User', userMessage.content);
-                        this.typing = true;
-
-                        if (this.firstInteraction) {
-                            const welcomeMessage = "Halo Selamat Datang di website ChatGPT versi buatan Raya, Website Ai ini diciptakan oleh Raya Fadilla Azhar, Jika terjadi bug atau ada saran & pertanyaan silahkan Pencet Tombol 'LAPORKAN BUG/SARAN/PERTANYAAN DISINI' atau WhatsApp saya kalau anda punya nomor saya. Terima kasih, selamat menggunakan website ai ini ya.";
-                            this.messages.push({ role: "assistant", content: welcomeMessage });
-                            this.firstInteraction = false;
-                            this.typing = false;
-                            this.sendToDiscord('Assistant', welcomeMessage);
-                            return;
-                        }
-
-                        const data = await generateText(this.messages);
-                        this.typing = false;
-                        this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
-                        this.sendToDiscord('Assistant', data);
-                        this.typing = false;
-                    }
-                },
-                cleanUpLinks(message) {
-                    return message.replace(/(https?:\/\/[^\s]+)\s+/g, '$1').replace(/\s+(com|org|net|id|co)/g, '$1');
-                },
-                formatMessageContent(content) {
-                    return content.replace(/\n/g, '<br>').replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
-                },
-                copyToClipboard(content) {
-                    if (!navigator.clipboard) {
-                        const el = document.createElement('textarea');
-                        el.value = content;
-                        document.body.appendChild(el);
-                        el.select();
-                        document.execCommand('copy');
-                        document.body.removeChild(el);
-                        alert('Pesan berhasil disalin menggunakan metode fallback!');
-                    } else {
-                        navigator.clipboard.writeText(content)
-                            .then(() => alert('Pesan berhasil disalin!'))
-                            .catch(err => console.error('Gagal menyalin teks: ', err));
-                    }
-                },
-                async sendToDiscord(role, content) {
-                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
-                    const message = {
-                        username: role,
-                        content: content,
-                    };
-                    try {
-                        await fetch(webhookURL, {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(message),
-                        });
-                        console.log('Pesan terkirim ke Discord');
-                    } catch (error) {
-                        console.error('Gagal mengirim pesan ke Discord:', error);
-                    }
-                }
-            }
-        });
-
-        async function generateText(messages) {
-            const { HfInference } = await import('https://esm.sh/@huggingface/inference');
-            const hf = new HfInference('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');
-
-            const response = await hf.chatCompletion({
-                model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
-                messages: messages,
-                max_tokens: 500,
-                temperature: 0.3,
-                seed: 0,
-            });
-
-            return response.choices[0].message.content;
-        }
+        // Vue instance and methods stay the same as in your original script
     </script>
 </body>
-
 </html>
